[package]
name = "common"
description = "Share common tasks for the PAM and NSS modules"
version = "0.0.0"
edition = "2024"
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
libc = "0.2.174"
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "json", "http2", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
toml = "0.9.2"
