[package]
name = "config"
description = "Store configuration data for the PAM and NSS modules"
version = "0.0.0"
edition = "2024"
publish.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
libc = "0.2.174"
serde = { version = "1.0.219", features = ["derive"] }
toml = "0.9.2"
