[package]
name = "pam-keycloak"
version = "0.1.0"
edition = "2024"
description = "PAM module to authenticate via Keycloak."
publish.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
config = { path = "../config" }
copy_dir = "0.1.3"
pamsm = { version = "0.5.5", features = ["libpam"] }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "json", "http2", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
walkdir = "2.5.0"
