[package]
name = "pam-keycloak"
version.workspace = true
edition = "2024"
description = "PAM module to authenticate via Keycloak."
publish.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
common = { path = "../common" }
copy_dir = "0.1.3"
libc = "0.2.174"
pamsm = { version = "0.5.5", features = ["libpam"] }
reqwest = { version = "0.12.22", default-features = false, features = ["blocking", "json", "http2", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
walkdir = "2.5.0"
